# SecondaryDependency

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
Foo/: CMakeLists.txt
Foo/include/foo/: Foo.hpp
Foo/src/: Foo.cpp
FooBar/: CMakeLists.txt
FooBar/include/foobar/: FooBar.hpp
FooBar/src/: FooBar.cpp
FooBarApp/: CMakeLists.txt
FooBarApp/src/: main.cpp
docker/ubuntu-latest/: Dockerfile
